# FrontUQ-2024-proceedings-likelihood-ratios

./: .gitignore  README.md  heat_equation_grid.hpp  heat_equation_mc.cpp  metropolis_sampler.hpp  plotLikelihoodRatioMC.py  run_full_simulation.sh  setup_script.sh
code/: CMakeLists.txt  Makefile  PeriodicTridiagonalMatrix.cpp  PeriodicTridiagonalMatrix.hpp  TridiagonalMatrix.cpp  TridiagonalMatrix.hpp  heat_equation_grid.cpp  heat_equation_grid.hpp  heat_equation_mc.cpp  heat_equation_mc.hpp  likelihoodRatioMC.cpp  metropolis_sampler.hpp  plotLikelihoodRatiosFullScale.py  plotLikelihoodRatiosTest.py  testMatrix.cpp
